# infermesh

./: .gitignore  CHANGELOG.md  NOTICE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/design/: console-redesign-v2.html  design-and-porting-notes.zh.md
docs/milestones/: milestone-2-claude-code-prompt.zh.md
docs/review/: code-review-v0.4.0.zh.md
fixtures/correctness/: prompts.jsonl
infermesh/: __init__.py  cli.py  dashboard.py  mcp_server.py  server.py
infermesh/api/: __init__.py  anthropic_models.py  anthropic_utils.py  embedding_models.py  multimodal.py  openai_models.py  rerank_models.py  thinking.py  tool_calling.py  utils.py
infermesh/backends/: __init__.py
infermesh/config/: chip_specs.json
infermesh/core/: __init__.py  _dlworker.py  analysis.py  backend.py  bench_jobs.py  benchmark.py  community.py  correctness.py  derive.py  devices.py  downloader.py  factory.py  history.py  memory.py  (+8 more)
scripts/: gen_reference.py
tests/: conftest.py  test_analysis.py  test_anthropic_endpoint.py  test_batching.py  test_bench_jobs.py  test_benchmark.py  test_cli_desktop.py  test_community.py  test_community_migration.py  test_correctness.py  test_daemon.py  test_dashboard.py  test_derive.py  test_downloader.py  test_embeddings_rerank.py  test_guide.py  test_i18n_coverage.py  test_keepalive.py  test_kv_cache.py  test_logs_settings.py  test_mcp.py  test_model_settings.py  test_multi_device.py  test_no_vendor_imports.py  test_observability.py  test_openai_backend.py  test_openai_endpoint.py  test_pool_lifecycle.py  test_power_sampling.py  test_scheduler.py  test_specs.py  test_stats.py  test_sweep.py  test_tool_calling.py  test_transformers_backend.py  test_unsupported_model.py  test_vllm_backend.py  test_vlm.py
(+14 files in other folders)
