[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infermesh"
version = "0.3.2"
description = "Hardware-agnostic LLM inference serving platform. Protocol adapters and model-pool orchestration adapted from jundot/omlx (Apache-2.0); compute backends are pluggable behind a single interface."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "infermesh contributors" }]
keywords = ["llm", "inference", "serving", "openai", "anthropic", "vllm"]

# Control plane + API gateway deps. NOTE: no mlx, no torch here (see the
# non-negotiable rule in the project spec / tests/test_no_vendor_imports.py).
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
    "httpx>=0.27",
    "psutil>=5.9",
    # Pulled in by the lifted oMLX protocol layer (api/): tool_calling.py uses
    # `regex` for multi-format tool-call parsing, and response-format/grammar
    # handling uses `jsonschema`. Pure protocol code — still no vendor SDK.
    "regex>=2023.0.0",
    "jsonschema>=4.18",
]

[project.optional-dependencies]
# Hardware/engine backends declare their own heavy deps as extras so the
# control plane installs (and imports) without them.
vllm = ["vllm", "httpx"]
transformers = ["transformers>=4.40", "torch", "accelerate", "httpx"]
downloader = ["huggingface_hub"]
modelscope = ["modelscope"]
mcp = ["mcp", "httpx"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
infermesh = "infermesh.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["infermesh"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
